src/objects/loan__Teller_Cash_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>loan__Amount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <errorMessage>The selected Loan Account is not valid. Please check its status.</errorMessage>
            <filterItems>
                <field>loan__Loan_Account__c.loan__Loan_Status__c</field>
                <operation>equals</operation>
                <value>Active - Good Standing</value>
            </filterItems>
            <filterItems>
                <field>loan__Loan_Account__c.loan__Loan_Status__c</field>
                <operation>equals</operation>
                <value>Active - Bad Standing</value>
            </filterItems>
            <filterItems>
                <field>loan__Loan_Account__c.loan__Loan_Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>loan__Loan_Account__c.loan__Loan_Status__c</field>
                <operation>equals</operation>
                <value>Disbursed to LO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Teller Cash Transactions</relationshipLabel>
        <relationshipName>Teller_Cash_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__MF_Account_Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Tag</label>
        <referenceTo>loan__MF_Account_Tag__c</referenceTo>
        <relationshipLabel>Teller Cash Transactions</relationshipLabel>
        <relationshipName>Teller_Cash_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Savings Account you have selected is not Active. Please check its status.</errorMessage>
            <filterItems>
                <field>loan__Savings_Account__c.loan__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Savings_Account__c</referenceTo>
        <relationshipLabel>Teller Cash Transactions</relationshipLabel>
        <relationshipName>Teller_Cash_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_For__c</fullName>
        <label>Transaction For</label>
        <picklist>
            <picklistValues>
                <fullName>GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash Received / Income</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Dispensed / Expense</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Teller Cash Transaction</label>
    <nameField>
        <displayFormat>TCT-{00000000}</displayFormat>
        <label>Teller Cash Transaction Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teller Cash Transactions</pluralLabel>
    <recordTypes>
        <fullName>loan__TCTGL</fullName>
        <active>true</active>
        <label>TCTGL</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__TCTLoan</fullName>
        <active>true</active>
        <label>TCTLoan</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__TCTSavings</fullName>
        <active>true</active>
        <label>TCTSavings</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>